--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tte-dex",
   "version": "1.0.0",
   "description": "TTE DEX project",
-  "author": "Your Name",
+  "author": "Daniel Effiong",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.1.0",
     "chai": "^4.3.6",
+    "dotenv": "^10.0.0",
     "mocha": "^9.2.2",
     "solhint": "^3.3.7"
   }
