--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tte-dex",
   "version": "1.0.0",
   "description": "TTE DEX project",
-  "author": "Your Name",
+  "author": "Daniel Effiong",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
